# world

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  dev.sh  docker-compose.yml  pyproject.toml  weltmodell-architektur.md  weltmodell-design-system.html
db/: Containerfile
db/migrations/: 0001_substrate.sql  0002_seed_ontology.sql  0003_source_file.sql  0004_upper_ontology.sql  0005_label_predicate.sql  0006_org_accounts.sql  0007_occurrents_social.sql  0008_mcp_oauth.sql  0009_dedup_keys_embeddable.sql  0010_api_keys.sql  0011_finance.sql  0012_recompute_entity_labels.sql  0013_proposal_flow_erweitert.sql  0014_identifying_indexe.sql  0015_proposed_interface.sql  0016_qualifier_quantity.sql  0017_person_namen.sql  0018_graph_metrics.sql  0019_analysis_views.sql  0020_worldai.sql  0021_mcp_tool_log.sql  0022_instagram_attribute.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: drag.mjs  perf.mjs  shots.mjs  touch-audit.mjs
frontend/src/: App.tsx  main.tsx  theme.css
src/weltmodell/: analysis.py  api.py  api_keys.py  auth.py  config.py  constitution.md  db.py  embeddings.py  entities.py  errors.py  (+13 more)
tests/: conftest.py  test_ai.py  test_ai_agent.py  test_analysis.py  test_api.py  test_api_keys.py  test_auth.py  test_files.py  test_follower_import.py  test_graph_metrics.py  test_instagram_import.py  test_llm.py  test_mcp.py  test_pipeline.py  test_queries.py  test_registry.py  test_resolution.py  test_smoke.py  test_snapshot_import.py  test_statements.py  test_timeline.py
(+56 files in other folders)
