[project]
name = "weltmodell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jpetzke", email = "jonas.petzke@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "uvicorn>=0.32",
]

[project.scripts]
weltmodell = "weltmodell:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]
