[project]
name = "weltmodell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jpetzke", email = "jpetzke@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "mcp>=1.28.1",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "python-multipart>=0.0.32",
    "uvicorn>=0.32",
]

[project.scripts]
weltmodell = "weltmodell:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[tool.pytest.ini_options]
markers = [
    "smoke: ruft jedes MCP-Tool einmal erfolgreich auf — vor jedem Deploy ausführen (uv run pytest -m smoke)",
]
